--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -24,10 +24,17 @@
 .sidebar {
   background-color: var(--color-grey-dark-1);
   flex: 0 0 18%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .hotel-view {
   background-color: white;
+
+  //TEST
+  background-color: orangered;
+  height: 80rem;
 
   flex: 1;
 }
